<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tasks</string>
    <string name="action_settings">Settings</string>

    <string name="button_save">Save</string>
    <string name="empty_not_saved">Unsaved Task</string>
    <string name="clear_all_data">Delete everything</string>
    <string name="delete_word_preamble">Delete: </string>
    <string name="clear_data_toast_text">All deleted data</string>
    <string name="no_tarea">No task</string>
    <string name="hint_tarea">Task</string>
    <string name="hint_descripcion">Description</string>
    <string name="text_finalizada">Finished</string>
    <string name="fecha_inicio">Date of creation:</string>
    <string name="tarea_vacia">Enter a task</string>
    <string name="alfabetic_ordenar">Alphabetical order</string>
    <string name="fecha_ordenar">End date</string>
    <string name="ordenar_alfabeticamente">Alphabetically ordered tasks</string>
    <string name="ordenar_fecha">Tasks sorted by completion date</string>
    <string name="fecha_finalizacion">Finish date</string>
    <string name="hint_fechafin">Finish date</string>
    <string name="hint_horafin">End time</string>
    <string name="button_hora">Hour</string>
    <string name="button_fecha">Date</string>
    <string name="button_delete">Delete</string>
    <string name="text_filtrar_todas">All</string>
    <string name="text_filtrar_finalizado">Finished</string>
    <string name="text_filtrar_nofinalizado">Not finished</string>
    <string name="text_mostrartodas">All tasks</string>
    <string name="text_filtrarfin">Finished</string>
    <string name="text_filtrarnofin">Not finished</string>
    <string name="text_filtrar_alarma">Alarm activated</string>
    <string name="text_info">Information</string>
    <string name="text_informacion">
This app shows a list of tasks.\nThose completed are marked in red.\nWhen you enter a date and time of completion and Activate alarm marks.\nAn alarm is created to remind you.\nTasks can be deleted by sliding them anywhere.\nWe will have the options to search for a task or filter and order.\nSwiping down resets filters and displays alphabetically ordered list.</string>

    <string name="new_notification">Finished work</string>
    <string name="notificaciontoast">Alarm created</string>
    <string name="changed_to">Alarm changed at %s</string>
    <string name="alarma_borrada_text">Delete alarm</string>
    <string name="Alarmaactivada">Alarm activated</string>
    <string name="tarea_borrada">Task deleted</string>
    <string name="alertaborrar">Are you sure you want to delete the Task? The alarm associated with this Task will also be cleared.</string>
    <string name="alertaborrartodas">Are you sure you want to delete all Tasks? The associated alarms will also be cleared.</string>
    <string name="text_filtrar_ordenar">Order or Filter</string>
    <string name="text_filtrar">Filter</string>
    <string name="text_ordenar">Order</string>
    <string name="confirmar">Yes</string>
    <string name="cancelar">No</string>
    <string name="text_alerd_borrar">Confirm</string>
    <string name="text_ok">Ok</string>
    <string name="night_mode">Night mode</string>
    <string name="day_mode">Day mode</string>
</resources>