<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreenBackground"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/edit_titulo"
        style="@style/text_view_style"
        android:hint="@string/hint_tarea"
        android:inputType="textAutoComplete"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_descripcion"
        style="@style/text_view_style"
        android:hint="@string/hint_descripcion"
        android:inputType="textAutoComplete"
        android:autofillHints="" />

    <TextView
        android:id="@+id/text_fecha_fin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fecha_finalizacion" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_fecha"
            style="@style/text_view_style2"
            android:text="@string/button_fecha" />

        <EditText
            android:id="@+id/fecha_fin"
            style="@style/text_view_style2"
            android:layout_marginStart="5dp"
            android:hint="@string/hint_fechafin"
            android:inputType="textAutoComplete"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_hora"
            style="@style/text_view_style2"
            android:text="@string/button_hora" />

        <EditText
            android:id="@+id/hora_fin"
            style="@style/text_view_style2"
            android:layout_marginStart="5dp"
            android:hint="@string/hint_horafin"
            android:inputType="textAutoComplete"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/text_fecha_creacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_inicio" />
        <TextView
            android:id="@+id/fecha_creacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:id="@+id/alarmaid_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

    <CheckBox
        android:id="@+id/finalizada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_finalizada"
        android:visibility="invisible"/>


    <CheckBox
        android:id="@+id/chalarmaactivada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Alarmaactivada"/>

    <Button
        android:id="@+id/button_delete"
        style="@style/text_view_style3"
        android:text="@string/button_delete"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/button_save"
        style="@style/button_style"
        android:text="@string/button_save" />


</LinearLayout>